--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,20 @@ jobs:
   RunTests:
     runs-on : ubuntu-latest
     steps :
-    - name : checkout repositiry
-      uses: actions/checkout@v4.2.2
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    - name : list repo
-      run : ls -la 
-      
-    - name: run tests
-      run : pytest -vs
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+         python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+    - name: Run tests with pytest
+      run: |
+          pytest -vs
       
