--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install selenium 
+          pip install pytest
+          pip install requests
 
     - name: Run tests with pytest
       run: |
