--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install selenium 
           pip install pytest
+          pip install ddt
           
     - name: Install Google Chrome
       run: |
